# rust-password-manager

./: Cargo.toml
resrc/: english.tzip
src/: cli.yml  generate.rs  main.rs
