[package]
name = "rust-password-manager"
version = "0.1.0"
authors = ["passthroo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33.3", features = ["yaml"]}
rand = "0.8.3"
rand_chacha = "0.3.0"
quit = "1.1.3"
